Fixing double presentation issue on Safari.

--- a/packages/terra-layout/src/HoverTarget.scss
+++ b/packages/terra-layout/src/HoverTarget.scss
@@ -85,7 +85,8 @@
     }
 
     > .hover-section {
-      display: none;
+      overflow: hidden;
+      width: 0;
     }
   }
 }
